--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "turbo": "next dev --turbopack -H 0.0.0.0",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -15,6 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
+    "@hookform/resolvers": "5.2.0",
     "@neo/ui": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
@@ -26,7 +28,10 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "7.61.1",
+    "sonner": "2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "zod": "4.0.10"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
